syntax = "proto3";

package squareup.cash.pranadb.notifications.v1;

option go_package = "github.com/squareup/pranadb/protos/squareup/cash/pranadb/v1/notifications";

message DDLStatementInfo {
  int64 originating_node_id = 1;
  string schema_name = 3;
  string sql = 4;
  repeated uint64 table_sequences = 5;
}

message SessionClosedMessage {
  string session_id = 1;
}